Add launcher for embedded tomcat
* Main method that launches the embedded tomcat instance
* Add the resource config to a servlet container from the embedded tomcat server